<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActicity">

    <ImageView
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/title"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif-light"
    android:text="@string/our_menu"
    android:textAllCaps="true"
    android:layout_gravity="center_horizontal"
    android:textSize="20sp"
    android:layout_marginTop="10dp"
    />


    <GridLayout
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:layout_marginTop="20dp"
    android:paddingHorizontal="50dp">

        <Button
            android:id="@+id/button_cold_drinks"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:text="@string/cold_drinks"
            android:textColor="@color/dusty_white"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/button_hot_drinks"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:text="@string/hot_drinks"
            android:textColor="@color/dusty_white"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/button_sweets"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:background="@drawable/second_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:text="@string/sweets"
            android:textColor="@color/dusty_white"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/button_salties"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:background="@drawable/second_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:text="@string/salties"
            android:textColor="@color/dusty_white"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/button_combos"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:background="@drawable/second_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:text="@string/combos"
            android:textColor="@color/dusty_white"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/button_customizable"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:background="@drawable/second_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:text="@string/customizable"
            android:textColor="@color/dusty_white"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text" />




    </GridLayout>















</LinearLayout>